[package]
name = "swap-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.6"
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.14.3"
spl-token = "3.5.0"
thiserror = "1.0.37"

[dev-dependencies]
solana-program-test = "1.14.3"
solana-sdk = "1.14.3"
